Update some foobars

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,17 @@ set(GLFW_BUILD_DOCS OFF)
 set(BUILD_SHARED_LIBS ON)
 option(BD_BUILD_DOCS "Build the docs with Doxygen" ON)
 if(Vulkan_FOUND)
-    add_library(bluedragon SHARED engine/src/BDWindow.cpp)
+    add_library(bluedragon SHARED engine/src/BDWindow.cpp engine/src/BDDevice.cpp)
+    add_dependencies(bluedragon glfw glm)
     target_include_directories(bluedragon PUBLIC engine/include ${Vulkan_INCLUDE_DIRS} ${glfw_SOURCE_DIR}/include ${glm_SOURCE_DIR})
+    target_link_libraries(bluedragon PUBLIC ${Vulkan_LIBRARIES} glfw glm)
+    add_custom_command(
+       TARGET bluedragon
+       PRE_BUILD
+       COMMAND glslc ${CMAKE_SOURCE_DIR}/engine/shader/default.vert --target-env=vulkan1.3 -Os -o ${CMAKE_BINARY_DIR}/default.vert.spv -std=450core
+       COMMAND glslc ${CMAKE_SOURCE_DIR}/engine/shader/default.frag --target-env=vulkan1.3 -Os -o ${CMAKE_BINARY_DIR}/default.frag.spv -std=450core
+       COMMENT "Building shaders"
+    )
     target_compile_features(bluedragon PUBLIC cxx_std_17)
 else()
     message(FATAL_ERROR "You didn't install Vulkan! CHeck if you installed it!")
@@ -35,9 +44,9 @@ endif()
 
 if(BD_BUILD_DOCS AND Doxygen_FOUND AND CMAKE_BUILD_TYPE MATCHES "^[Rr]elease")
     set(Doxygen_IN ${CMAKE_SOURCE_DIR}/docs/Doxyfile.in)
-    set(Doxygen_OUT ${CMAKE_BINARY_DIR}/docs/Doxyfile)
+    set(Doxygen_OUT ${CMAKE_BINARY_DIR}/Doxyfile)
     configure_file(${Doxygen_IN} ${Doxygen_OUT} @ONLY)
-    message("Generating docs started!")
+    message(STATUS "Generating docs started!")
     add_custom_target(bluedragon_docs ALL 
         COMMAND ${Doxygen_EXECUTABLE} ${Doxygen_OUT}
         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
@@ -46,6 +55,6 @@ if(BD_BUILD_DOCS AND Doxygen_FOUND AND CMAKE_BUILD_TYPE MATCHES "^[Rr]elease")
     )
 elseif(BD_BUILD_DOCS AND NOT Doxygen_FOUND)
     message(FATAL_ERROR "Do you wanna build docs without doxygen ???")
-elseif(BD_BUILD_DOCS AND Doxygen_FOUND AND NOT CMAKE_BUILD_TYPE MATCHES "^[Rr]elease")
-    message(WARNING "ACTIVATE RELEASE FOR THE DOCS!!!")
 endif()
+
+add_subdirectory(test)
