Update code to rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,6 @@ set(GLFW_INSTALL OFF)
 set(GLFW_BUILD_WIN32 ON)
 set(GLFW_BUILD_DOCS OFF)
 set(BUILD_SHARED_LIBS ON)
-option(BD_BUILD_DOCS "Build the docs with Doxygen" ON)
 if(Vulkan_FOUND)
     add_library(bluedragon SHARED engine/src/BDWindow.cpp engine/src/BDDevice.cpp)
     add_dependencies(bluedragon glfw glm)
@@ -42,19 +41,5 @@ else()
     message(FATAL_ERROR "You didn't install Vulkan! CHeck if you installed it!")
 endif()
 
-if(BD_BUILD_DOCS AND Doxygen_FOUND AND CMAKE_BUILD_TYPE MATCHES "^[Rr]elease")
-    set(Doxygen_IN ${CMAKE_SOURCE_DIR}/docs/Doxyfile.in)
-    set(Doxygen_OUT ${CMAKE_BINARY_DIR}/Doxyfile)
-    configure_file(${Doxygen_IN} ${Doxygen_OUT} @ONLY)
-    message(STATUS "Generating docs started!")
-    add_custom_target(bluedragon_docs ALL 
-        COMMAND ${Doxygen_EXECUTABLE} ${Doxygen_OUT}
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-        COMMENT "Making the docs for you..."
-        VERBATIM
-    )
-elseif(BD_BUILD_DOCS AND NOT Doxygen_FOUND)
-    message(FATAL_ERROR "Do you wanna build docs without doxygen ???")
-endif()
-
 add_subdirectory(test)
+add_subdirectory(docs)
